--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Read Circle",
-  "short_name": "ReadCircle",
+  "name": "SURA - Manevi Halka",
+  "short_name": "SURA",
   "description": "Dijital Assistant",
   "start_url": "/",
   "display": "standalone",
