--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
+    "firebase": "^12.9.0",
     "next": "16.1.4",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
