--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,7 @@
   "hints": {
     "axe/name-role-value": "off",
     "no-inline-styles": "off",
-    "typescript-config/consistent-casing": "off"
+    "typescript-config/consistent-casing": "off",
+    "axe/aria": "off"
   }
 }
